fix get pid in windows with debug log